# EMStudio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dev.sh  em.sh  set-version.sh
apps/desktop/: README.md  build-bridge.sh
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/em-cli/: Cargo.toml
crates/em-cli/src/: main.rs
crates/em-core/: Cargo.toml
crates/em-core/src/: emjson.rs  layout.rs  lib.rs  model.rs  validation.rs
crates/em-wasm/: Cargo.toml
crates/em-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SESSION-HANDOFF-sync.md  adr-001-s3dgraphy-consumption.md  adr-002-sync-architecture.md  emjson-v1-draft.md  yed-parity.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  viewer.html  vite.config.ts
frontend/scripts/: build-wasm.sh  sync-datamodels.sh
frontend/src/: emcore.ts  filters.ts  folding.ts  icons.ts  inspector.ts  main.ts  model.ts  nodelist.ts  overview.ts  palette-ui.ts  palette.ts  renderer.ts  routing.ts  rules.ts  scene.ts  search.ts  settings.ts  style.css  svg-export.ts  sync.ts  tauri.ts  types.ts  version.d.ts  versions.ts  vocab.ts
frontend/src/assets/: em_node_classes.json  em_qualia_types.json  em_visual_rules.json  node_registry.generated.json  s3Dgraphy_connections_datamodel.json  s3Dgraphy_node_datamodel.json
frontend/src/views/: context.ts  graph.ts  matrix.ts
frontend/src/wasm/: em_wasm.wasm
frontend/testdata/: TempluMare.em.json
schemas/: em.v1.schema.json
tools/: em2graphml.py  em_bridge.py  graphml2em.py  requirements.txt
