[workspace]
resolver = "2"
members = [
    "crates/em-core",
    "crates/em-cli",
    "crates/em-wasm",
    # "crates/em-server",   # enable when the axum skeleton lands (phase 6)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/zalmoxes-laran/EMStudio"
authors = ["Emanuel Demetrescu <emanuel.demetrescu@cnr.it>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
