[package]
name = "em-core"
description = "Extended Matrix editor core: graph model, .em.json I/O, connection validation, layout engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
