[package]
name = "emstudio-desktop"
version = "0.1.0"
description = "EMStudio desktop shell (Tauri)"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Emanuel Demetrescu <emanuel.demetrescu@cnr.it>"]

# Standalone workspace: keeps the heavy Tauri dependency tree out of the
# root cargo workspace (em-core/em-cli stay lean for CI).
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
